# PINNs

./: README.md  check_env.py  pyproject.toml
tutorials/: gravity_tutorial_detailed.ipynb  gravity_tutorial_simple.ipynb
