[project]
name = "pinns"
version = "0.1.0"
description = "A short tutorial for PINNs."
authors = [
    {name = "Mark Bugden",email = "mark.bugden@datmole.cz"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "celluloid (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-cpu"}

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
